# -rpn-calculator

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile.bak
.github/workflows/: ci.yml
html/: dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  rpn_8cpp.html  rpn_8cpp__incl.map  rpn_8cpp__incl.md5  rpn_8h.html  rpn_8h_source.html
include/: rpn.h
src/: main.cpp  rpn.cpp
tests/: CMakeLists.txt  test_rpn.cpp
